2012-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* retweet.png: Added a retweet icon.

2012-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added support for auto start & geometry saving.
	* preferences.py: Save recents tab.
	* tweetentry.py, menu.py: Added support for Retweet.
	* autostart.py: Added support for auto start.
	* ja.po: Added Japanese translation.

2012-01-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.1 release.

2012-01-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added auto control of scrolling.  Added support for
	  user icons on notifications.

2012-01-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gfeedline.desktop.in: Added a Desktop entry.
	* setup.py: Added an installation schema.
	* twittytwister: Include the module.
	* window.py: Added a context menu item for 'Search Google'.

2012-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py, update.glade: Added support for updating statuses.
	* twitter/api.py: Added support for recieving Direct Messages.
	* utils/htmlentities.py: Code refactoring.

2012-01-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Added support for Desktop Notification.
	* constants.py: Added constants class.
	* nullobject.py: Added null object class.
	* twitter/api.py: Added support for Search API.

2012-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for feedlist store drag & drop.

2012-01-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/*, share/feedsource.glade: Added feed source
	  dialogs for feeds configuration.

2012-01-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/api.py: Added support for reconnecting lost feed
	  streaming.

2012-01-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* assistant_twitter.py, twitterauthorize.py, assistant_twitter.glade:
	  Added an assistant for twitter authorization.
	* settings.py, com.googlecode.gfeedline.gschema.xml.in: Added GSettings.