@@ -41,7 +41,7 @@ class Preferences(object):
         treeview.set_model(self.liststore)
         treeview.set_headers_clickable(False) # Builder bug?
         treeview.connect("drag-begin", self.on_drag_begin)
-        treeview.connect("drag-end", self.on_drag_end, mainwindow.notebook)
+        treeview.connect("drag-end", self.on_drag_end)
 
         self.button_prefs = gui.get_object('button_feed_prefs')
         self.button_prefs.set_sensitive(False)
@@ -67,12 +67,12 @@ class Preferences(object):
         model, iter = treeselection.get_selected()
         self.api_obj = model.get_value(iter, 8) # liststore obj
 
-    def on_drag_end(self, treeview, dragcontext, notebook):
+    def on_drag_end(self, treeview, dragcontext):
         model = treeview.get_model()
         all_obj = [x[8] for x in model]  # liststore obj
         page = all_obj.index(self.api_obj)
 
-        notebook.reorder_child(self.api_obj.view.sw, page)
+        #notebook.reorder_child(self.api_obj.view.sw, page) # FIXME
 
     def on_setting_username_changed(self, *args):
         user_name = SETTINGS_TWITTER.get_string('user-name') or 'none'
