@@ -30,13 +30,8 @@ class MainWindow(object):
         gui.add_from_file(os.path.join(SHARED_DATA_DIR, 'gfeedline.glade'))
 
         self.window = window = gui.get_object('window1')
+        self.hbox = gui.get_object('hbox1')
 
-        self.notebook = gui.get_object('notebook1')
-        self.notebook.remove_page(0)
-        self.notebook.connect('switch-page', self.on_update_tablabel_sensitive)
-        self.notebook.connect('button-press-event', 
-                              self.on_update_tablabel_sensitive)
-        # self.notebook.connect('page-reordered', self.on_page_reordered)
 
         menubar = gui.get_object('menubar1')
         self.notification = StatusNotification('Gnome Feed Line')
@@ -57,12 +52,6 @@ class MainWindow(object):
         window.show_all()
 
         gui.connect_signals(self)
-
-    def on_update_tablabel_sensitive(self, notebook, *args):
-        page = notebook.get_current_page() # get previous page
-        sw = notebook.get_nth_page(page)
-        if hasattr(sw.feedview, 'tab_label'):
-            sw.feedview.tab_label.set_sensitive(False)
 
     def on_stop(self, *args):
         print "save!"
@@ -94,7 +83,25 @@ class MainWindow(object):
             self.window.stick()
         else:
             self.window.unstick()
-        
+
+class FeedNotebook(Gtk.Notebook):
+
+    def __init__(self, parent):
+        super(FeedNotebook, self).__init__()
+        self.connect('switch-page', self.on_update_tablabel_sensitive)
+        self.connect('button-press-event', self.on_update_tablabel_sensitive)
+        # self.connect('page-reordered', self.on_page_reordered)
+
+        print "_"*80
+        parent.add(self)
+        self.show()
+
+    def on_update_tablabel_sensitive(self, notebook, *args):
+        page = notebook.get_current_page() # get previous page
+        sw = notebook.get_nth_page(page)
+        if hasattr(sw.feedview, 'tab_label'):
+            sw.feedview.tab_label.set_sensitive(False)
+
 class FeedScrolledWindow(Gtk.ScrolledWindow):
 
     def __init__(self, feedview):
@@ -204,9 +211,9 @@ class FeedWebViewScroll(object):
 
 class FeedView(object):
 
-    def __init__(self, window, name='', page=-1):
+    def __init__(self, window, notebook, name='', page=-1):
         self.sw = FeedScrolledWindow(self)
-        self.notebook = window.notebook
+        self.notebook = notebook
         self.notebook.append_page(self.sw, Gtk.Label.new_with_mnemonic(name))
         self.notebook.reorder_child(self.sw, page)
         # self.notebook.set_tab_reorderable(self.sw, True)
